update exercices using js modules

--- a/Exercice7/index.html
+++ b/Exercice7/index.html
@@ -10,7 +10,7 @@
     <section class="content"></section>
 
     <script type="module">
-      // ce script est de type module.
+       // ce script est de type module.
       // Cela permet d'importer ce qui est exporté du fichier javascript indiqué après from
       // On importe l'objet DataRecipe contenu (et exporté) dans "./data/dataRecipe.js"
       import { DataRecipe } from "./data/dataRecipe.js";
@@ -24,9 +24,9 @@
 
 
       /* QUESTIONS:
-         Les données ont évoluées, regardez le fichier data/dataRecipe.js pour voir les changements.
+         Les données ont encore évoluées, regardez le fichier data/dataRecipe.js pour voir les changements.
          Puis allez modifier le composant Recipe (component/Recipe/script.js) pour qu'il soit 
-         capable d'afficher les nouvelles données.
+         capable d'afficher les nouvelles données (c'est à dire plusieurs recettes)
       */
     </script>
   
